--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="medicalStudiesApp">
+<html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1">
 	<meta http-equiv="Content-Type" charset="utf-8">
@@ -9,25 +9,26 @@
 	<!-- <link rel="stylesheet" href="libs/reset.css" /> <!-- meyer reset -->
 	<link rel="stylesheet" href="css/style.css" />
 </head>
-<body ng-controller="mainCtrl">
+<body>
 	<header>
 		<h2>clinical trials</h2>
 	</header>
 	
-	<main>	
-		<!-- search & filter -->
-		<p>Please input search topics</p>
-		<input id="searchTopic" type="search" placeholder="search studies" ng-model="searchTopic" />
-		<p>Input between 0 - 100 results</p>
-		<input id="resultsCount" type="number" min="0" max="100" pattern="\d+" ng-model="resultsCount" />
-		<button ng-click="fetchResults();">get results!</button>
+	<main>
+		<section> <!-- search & filter -->
+			<p>Please input search topics</p>
+			<input id="searchTopic" type="search" placeholder="search studies" />
+			<p>Input between 0 - 100 results</p>
+			<input id="resultsCount" type="number" min="0" max="100" pattern="\d+" />
+			<button>get results!</button>
+		</section>
+		<section> <!-- charts section -->
+		</section>
 	</main>
 	<footer>
 		<!-- load js files -->
-		<!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>-->
-		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular.min.js"></script>
-		<script src="js/app.js"></script>
-		<!--<script src="js/jquery.js"></script>-->
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<script src="js/script.js"></script>
 	</footer>
 </body>
 </html>
