1st chart with data working

--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
 			<input id="resultsCount" type="number" min="0" max="100" pattern="\d+" />
 			<button>get results!</button>
 		</section>
-		<section> <!-- charts section -->
+		<section id="charts"> <!-- charts section -->
 		</section>
 	</main>
 	<footer>
 		<!-- load js files -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<script src="http://code.highcharts.com/highcharts.js"></script>
 		<script src="js/script.js"></script>
 	</footer>
 </body>
