refactored code, added click event to first chart

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 			<input id="resultsCount" type="number" min="0" max="100" pattern="\d+" />
 			<button>get results!</button>
 		</section>
-		<section id="charts"> <!-- charts section -->
+		<section id="charts">
+			<!-- display charts here -->
 		</section>
 	</main>
 	<footer>
