--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!doctype html>
-<html>
+<html lang='en'>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1">
 	<meta http-equiv="Content-Type" charset="utf-8">
-	<title>zephyr health | assignment</title>
+	<title>medical studies</title>
 	
 	<!-- css links -->
-	<!-- <link rel="stylesheet" href="libs/reset.css" /> <!-- meyer reset -->
+	<link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono' rel='stylesheet' type='text/css' />
+	<link rel="stylesheet" href="css/reset.css" /> <!-- meyer reset -->
 	<link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-	<header>
-		<h2>clinical trials</h2>
-	</header>
+	<header>medical studies</header>
 	
 	<main>
 		<section> <!-- search & filter -->
