fixed table display error of showing results not in category

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<input id="searchTopic" type="search" placeholder="search studies" />
 			<p>Input between 0 - 100 results</p>
 			<input id="resultsCount" type="number" min="0" max="100" pattern="\d+" />
-			<button>get results!</button>
+			<button>GO!</button>
 		</section>
 		<section id="charts">
 			<!-- display charts here -->
